[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["VladyslavBon <vladislav.bondarenko96@gmail.com>"]
readme = "README.md"
packages = [{include = "test_project"}]

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
